--- a/resources/assets/sass/story/_story.scss
+++ b/resources/assets/sass/story/_story.scss
@@ -404,3 +404,10 @@ display:none;
 
 }
 
+.storybyline {
+
+.textbottom__article__name{
+ padding-left:0;
+}
+
+}
